웹 서버 Step8 구현 (#417)
* chore: webapp 폴더 resource 로 이동

* chore: build.gradle jar 설정 추가

* feat: 서버 배포시 resource 파일을 정상적으로 불러오도록 수정

* chore: 사용자로그, 에러로그 분리 및 파일 저장

* docs: README.md 추가

README.md 추가

* docs: GC 모니터링 REAMDE 추가

GC 모니터링 REAMDE 추가